use tile constructor in tests