@@ -1,6 +1,7 @@
 package de.neuefische.paulkreft.backend.game.controller;
 
 import de.neuefische.paulkreft.backend.game.model.Game;
+import de.neuefische.paulkreft.backend.game.model.Tile;
 import de.neuefische.paulkreft.backend.game.repository.GameRepo;
 import de.neuefische.paulkreft.backend.services.IdService;
 import de.neuefische.paulkreft.backend.services.TimeService;
@@ -17,6 +18,7 @@ import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 import java.time.Instant;
 import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
@@ -86,7 +88,7 @@ class GameControllerIntegrationTest {
     void getGamesByUserIdTest_whenOneMatchingGameInDB_thenReturnMatchingGame() throws Exception {
         // Given
         Instant now = Instant.parse("2016-06-09T00:00:00Z");
-        Game testGame = new Game("1", "User1", "Type", 1, true, 10, Collections.emptyList(), now);
+        Game testGame = new Game("1", "User1", "Type", 1, true, 10, List.of(new Tile("#FFFFFF")), now);
         Game testGame2 = new Game("2", "User2", "Type", 1, true, 10, Collections.emptyList(), now);
         gameRepo.save(testGame);
         gameRepo.save(testGame2);
@@ -103,7 +105,7 @@ class GameControllerIntegrationTest {
                             "difficulty": 1,
                             "isSuccess": true,
                             "duration": 10,
-                            "configuration": [],
+                            "configuration": [{"color":"#FFFFFF"}],
                             "createdAt": "2016-06-09T00:00:00Z"
                         }]
                         """));
